<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="org.linphone.ui.main.recordings.viewmodel.RecordingsListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/color_background_contrast_in_dark_mode">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.recordings.empty ? View.VISIBLE : View.GONE}"
            app:constraint_referenced_ids="no_recording_image, no_recording_label" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.searchBarVisible ? View.VISIBLE : View.GONE, default=gone}"
            app:constraint_referenced_ids="search_toggle, cancel_search, search, clear_field" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/search_toggle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.openSearchBar()}"
            android:src="@drawable/magnifying_glass"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_open_filter"
            android:visibility="@{viewModel.searchBarVisible ? View.GONE : View.VISIBLE}"
            android:padding="12dp"
            app:tint="?attr/color_main2_600"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cancel_search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.closeSearchBar()}"
            android:src="@drawable/x"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_cancel_filter"
            android:padding="12dp"
            app:tint="?attr/color_main2_600"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            android:textColorHint="?attr/color_main2_400"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:hintTextColor="?attr/color_main2_400"
            app:layout_constraintEnd_toStartOf="@id/clear_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:paddingVertical="1dp"
                android:text="@={viewModel.searchFilter}"
                android:textCursorDrawable="@null"
                android:textSize="16sp"
                android:hint="@string/search_recordings_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/clear_field"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.clearFilter()}"
            android:src="@drawable/x"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_clear_filter"
            android:padding="12dp"
            app:tint="?attr/color_main2_600"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/no_recording_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@null"
            android:src="@drawable/shape_empty"
            app:layout_constraintBottom_toTopOf="@id/no_recording_label"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/no_recording_label"
            style="@style/section_header_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recordings_list_empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/no_recording_image" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recordings_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/fetch_in_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="@{viewModel.fetchInProgress ? View.VISIBLE : View.GONE}"
            app:indicatorColor="?attr/color_main1_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>